--- a/configs/dl4mt_config.yaml
+++ b/configs/dl4mt_config.yaml
@@ -50,8 +50,9 @@ training_configs:
   shuffle: true
   use_bucket: true # Whether to use bucket. If true, model will run faster while a little bit performance regression.
   buffer_size: 1000 # Only valid when use_bucket is true.
-  shard_size: -1 # Shard size. Negative value if closed.
   batch_size: 50
+  batching_key: "samples"
+  update_cycle: -1
   valid_batch_size: 50
   bleu_valid_batch_size: 10
   bleu_valid_warmup: 10000 # Start to do BLEU validation after those steps
