--- a/configs/transformer_base_config.yaml
+++ b/configs/transformer_base_config.yaml
@@ -54,6 +54,8 @@ training_configs:
   buffer_size: 100 # Only valid when use_bucket is true.
   shard_size: -1 # Shard size. Negative value if closed.
   batch_size: 50
+  batching_key: "samples"
+  update_cycle: -1
   valid_batch_size: 50
   bleu_valid_batch_size: 10
   bleu_valid_warmup: 10000 # Start to do BLEU validation after those steps
