--- a/configs/transformer_base_config.yaml
+++ b/configs/transformer_base_config.yaml
@@ -1,5 +1,5 @@
 data_configs:
-  lang_pair: "en-zh"
+  lang_pair: "zh-en"
   train_data:
     - "/home/user_data/weihr/NMT_DATA_PY3/1.34M/train/zh.under50.txt"
     - "/home/user_data/weihr/NMT_DATA_PY3/1.34M/train/en.under50.txt"
@@ -50,9 +50,8 @@ optimizer_configs:
 training_configs:
   max_epochs: 1000000
   shuffle: true
-  use_bucket: false # Whether to use bucket. If true, model will run faster while a little bit performance regression.
-  buffer_size: 100 # Only valid when use_bucket is true.
-  shard_size: -1 # Shard size. Negative value if closed.
+  use_bucket: true # Whether to use bucket. If true, model will run faster while a little bit performance regression.
+  buffer_size: 1000 # Only valid when use_bucket is true.
   batch_size: 50
   batching_key: "samples"
   update_cycle: -1
