--- a/configs/nist_zh2en_attack.yaml
+++ b/configs/nist_zh2en_attack.yaml
@@ -1,45 +1,52 @@
 attack_configs:
+  seed: 1234
   victim_model: "/home/user_data/zouw/Models/save_zhen_bpe/transformer.best.final"
   victim_configs: "/home/user_data/zouw/Models/transformer_nist_zh2en_bpe.yaml"
   init_perturb_rate: 0.4
+  gamma: 0.99
+  tau: 1.0
+  entropy_coef: 0.05
+  value_coef: 0.5
 
-attacker_model_configs:
-  action_space: 2
-  action_roll_space: 1
-  d_word_vec: 512
-  d_model: 128
-  dropout: 0.0
-
-attacker_optimizer_configs:
-  optimizer: "adafactor"
-  learning_rate: 0.5
-  grad_clip: -1.0
-  optimizer_params: ~
-  schedule_methods: rsqrt
-  scheduler_configs:
+attacker_configs:
+  attacker_model_configs:
+    action_space: 2
+    action_roll_space: 1
+    d_word_vec: 512
     d_model: 128
-    warmup_steps: 100
+    dropout: 0.5
+
+  attacker_optimizer_configs:
+    optimizer: "adafactor"
+    learning_rate: 0.01
+    grad_clip: -1.0
+    optimizer_params: ~
+    schedule_method: rsqrt
+    scheduler_configs:
+      d_model: 128
+      warmup_steps: 100
 
 discriminator_data_configs:
   valid_data:
   - "/home/user_data/weihr/NMT_DATA_PY3/NIST-ZH-EN/test/mt03.src"
   - "/home/user_data/weihr/NMT_DATA_PY3/NIST-ZH-EN/test/mt03.ref0"
 
-discriminator_model_configs:
-  d_word_vec: 512
-  d_model: 128
-  dropout: 0.0
-  update_embedding: false
-
-discriminator_optimizer_configs:
-  optimizer: "adafactor"
-  learning_rate: 0.5
-  grad_clip: -1.0
-  optimizer_params: ~
-  schedule_method: rsqrt
-  scheduler_configs:
+discriminator_configs:
+  discriminator_model_configs:
+    d_word_vec: 512
     d_model: 128
-    warmup_steps: 10
+    dropout: 0.
+    update_embedding: true
+
+  discriminator_optimizer_configs:
+    optimizer: "adafactor"
+    learning_rate: 0.05
+    grad_clip: -1.0
+    optimizer_params: ~
+    schedule_method: rsqrt
+    scheduler_configs:
+      d_model: 128
+      warmup_steps: 5
 
 training_configs:
   seed: 1234
