--- a/configs/wmt_en2fr_attack.yaml
+++ b/configs/wmt_en2fr_attack.yaml
@@ -2,37 +2,45 @@ attack_configs:
   victim_model: "/home/public_data/nmtdata/nmt-baselines/transformer-wmt15-enfr/small_baseline/baseline_enfr_save/transformer.best.final"
   victim_configs: "/home/public_data/nmtdata/nmt-baselines/transformer-wmt15-enfr/small_baseline/transformer_wmt15_en2fr.yaml"
   init_perturb_rate: 1.0
+  gamma: 0.99
+  tau: 1.0
+  entropy_coef: 0.05
+  value_coef: 0.5
 
-attacker_model_configs:
-  d_word_vec: 512
-  d_model: 128
-  dropout: 0.0
-
-attacker_optimizer_configs:
-  optimizer: "adafactor"
-  learning_rate: 0.5
-  grad_clip: -1.0
-  optimizer_params: ~
-  schedule_methods: rsqrt
-  scheduler_configs:
+attacker_configs:
+  attacker_model_configs:
+    action_space: 2
+    action_roll_space: 1
+    d_word_vec: 512
     d_model: 128
-    warmup_steps: 100
+    dropout: 0.0
 
-discriminator_model_configs:
-  d_word_vec: 512
-  d_model: 128
-  dropout: 0.0
-  update_embedding: false
+  attacker_optimizer_configs:
+    optimizer: "adafactor"
+    learning_rate: 0.5
+    grad_clip: -1.0
+    optimizer_params: ~
+    schedule_methods: rsqrt
+    scheduler_configs:
+      d_model: 128
+      warmup_steps: 100
 
-discriminator_optimizer_configs:
-  optimizer: "adafactor"
-  learning_rate: 0.5
-  grad_clip: -1.0
-  optimizer_params: ~
-  schedule_method: rsqrt
-  scheduler_configs:
+discriminator_configs:
+  discriminator_model_configs:
+    d_word_vec: 512
     d_model: 128
-    warmup_steps: 10
+    dropout: 0.0
+    update_embedding: true
+
+  discriminator_optimizer_configs:
+    optimizer: "adafactor"
+    learning_rate: 0.5
+    grad_clip: -1.0
+    optimizer_params: ~
+    schedule_method: rsqrt
+    scheduler_configs:
+      d_model: 128
+      warmup_steps: 10
 
 training_configs:
   seed: 1234
