--- a/configs/wmt_en2de_attack_dl4mt.yaml
+++ b/configs/wmt_en2de_attack_dl4mt.yaml
@@ -1,31 +1,43 @@
 attack_configs:
-  victim_model: "/home/public_data/nmtdata/nmt-baselines/transformer-wmt15-enfr/small_baseline/baseline_enfr_save/transformer.best.final"
-  victim_configs: "/home/public_data/nmtdata/nmt-baselines/transformer-wmt15-enfr/small_baseline/transformer_wmt15_en2fr.yaml"
-  init_perturb_rate: 1.0
+  seed: 1234
+  victim_model: "/home/user_data/zouw/Models/save_dl4mt_en2de/dl4mt.best.final"
+  victim_configs: "/home/user_data/zouw/Models/dl4mt_wmt14_en2de.yaml"
+  pinyin_data: ""
+  init_perturb_rate: 0.4
   gamma: 0.99
   tau: 1.0
   entropy_coef: 0.05
   value_coef: 0.5
 
 attacker_configs:
+  attacker_update_steps: 120
+  attacker_batch: 50
   attacker_model_configs:
     action_space: 2
     action_roll_space: 1
     d_word_vec: 512
     d_model: 128
-    dropout: 0.0
+    dropout: 0.5
 
   attacker_optimizer_configs:
     optimizer: "adafactor"
-    learning_rate: 0.5
+    learning_rate: 0.01
     grad_clip: -1.0
     optimizer_params: ~
-    schedule_methods: rsqrt
+    schedule_method: rsqrt
     scheduler_configs:
       d_model: 128
       warmup_steps: 100
 
 discriminator_configs:
+  discriminator_update_steps: 80
+  discriminator_batch: 50
+  acc_bound: 0.85
+  converged_bound: 0.52
+  acc_valid_freq: 10
+  acc_valid_batch_size: 50
+  patience: 15
+
   discriminator_model_configs:
     d_word_vec: 512
     d_model: 128
@@ -34,13 +46,13 @@ discriminator_configs:
 
   discriminator_optimizer_configs:
     optimizer: "adafactor"
-    learning_rate: 0.5
+    learning_rate: 0.05
     grad_clip: -1.0
     optimizer_params: ~
     schedule_method: rsqrt
     scheduler_configs:
       d_model: 128
-      warmup_steps: 10
+      warmup_steps: 5
 
 training_configs:
   seed: 1234
@@ -51,11 +63,7 @@ training_configs:
   buffer_size: 1024
   batching_key: "samples"
   update_cycle: 4
-  valid_batch_size: 50
-  disp_freq: 100
   save_freq: 100
   num_kept_checkpoints: 1
   num_kept_best_model: 1
   loss_valid_freq: 10
-  acc_valid_freq: 10
-  acc_valid_batch_size: 64
